--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <footer>
             <h3>контакти: +123 456 789</h3>
             <h3>Сторінка</h3>
-            <h3>1 <span class="next">2</span><span class="move"><a href=""> > </a></span></h3> 
+            <h3>1 <span class="next">2</span><span class="move"><a href="https://illyakushta.github.io/shop2page/"> > </a></span></h3> 
         </footer>
     </body>
 </html>
